# PoseEstimationDemo

./: CMakeLists.txt  README.md  optDemo.cpp
BA_PnP_poseEstimation/: CMakeLists.txt  direct_method.cpp  pose_estimation_3d2d.cpp  pose_estimation_3d3d.cpp
BA_PnP_poseEstimation/assets/: intrinsics.txt
intealRealSenseBagParser/: CMakeLists.txt  parser.cpp
phoneCalib/: CMakeLists.txt  calib.cpp
